Desktop version complate

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
            <li class="sidebar__list"><a href="#contact" class="sidebar__link">contact</a></li>
        
        <li class="sidebar-icon">
-        <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/TikTok.svg"
+        <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/Instagram.svg"
             alt="instagram"></a>
     <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
             alt="tiktok"></i></a>
-    <a href="https://t.me/supersiteuz" class="navbar__icon"><img src="./img/TikTok.svg"
+    <a href="https://t.me/supersiteuz" class="navbar__icon"><img src="./img/Telegram.svg"
             alt="telegram"></a>
-    <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
+    <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/Mail_ru.svg"
             alt="mail"></a>
        </li>
         </ul>
@@ -50,14 +50,14 @@
                     </p>
                 </address>
                 <div class="icon-wrapper">
-                    <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/TikTok.svg"
-                            alt="instagram"></a>
-                    <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
-                            alt="tiktok"></i></a>
-                    <a href="https://t.me/supersiteuz" class="navbar__icon"><img src="./img/TikTok.svg"
-                            alt="telegram"></a>
-                    <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
-                            alt="mail"></a>
+                    <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/Instagram.svg"
+                        alt="instagram"></a>
+                <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
+                        alt="tiktok"></i></a>
+                <a href="https://t.me/supersiteuz" class="navbar__icon"><img src="./img/Telegram.svg"
+                        alt="telegram"></a>
+                <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/Mail_ru.svg"
+                        alt="mail"></a>
                    <span class="search-wrapper">
                     <input type="text" class="search-input" placeholder="Search">
                     <img src="./img/search.svg" alt="" class="search-icon">
@@ -243,33 +243,33 @@
                 <p class="creatives__subtitle">our portfolio</p>
                 <div class="portfolio-cards">
                     <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://pressauz.herokuapp.com" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                         <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://tasbex-max.netlify.app" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                         <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://weatherapps-max.netlify.app" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                         <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://suspicious-allen-33106f.netlify.app" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                         <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://artificial-inteligence.netlify.app" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                         <div class="portfolio-card">
-                            <a href="" class="portfolio-link">
-                            <img src="https://picsum.photos/200" alt="portfolio" class="portfolio-img">
+                            <a href="https://affectionate-stonebraker-dee9e1.netlify.app" class="portfolio-link">
+                            <img src="./img/porfolio-img.jpg" alt="portfolio" class="portfolio-img">
                         </a>
                         </div>
                 </div>
@@ -382,13 +382,14 @@
             </ul>
 
             <div class="footer-icons">
-                <a href="https://www.instagram.com/supersite.uz" class="footer__icon"><img src="./img/TikTok.svg"
-                        alt="instagram"></a>
-                <a href="https://www.tiktok.com/supersite" class="footer__icon"><img src="./img/TikTok.svg"
-                        alt="tiktok"></i></a>
-                <a href="https://t.me/supersiteuz" class="footer__icon"><img src="./img/TikTok.svg" alt="telegram"></a>
-                <a href="https://www.tiktok.com/supersite" class="footer__icon"><img src="./img/TikTok.svg"
-                        alt="mail"></a>
+                <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/Instagram.svg"
+                    alt="instagram"></a>
+            <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
+                    alt="tiktok"></i></a>
+            <a href="https://t.me/supersiteuz" class="navbar__icon"><img src="./img/Telegram.svg"
+                    alt="telegram"></a>
+            <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/Mail_ru.svg"
+                    alt="mail"></a>
             </div>
         </div>
     </footer>
