--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button onclick="w3_close()" class="close-btn"><img src="./img/x.svg" alt="x"></button>
            <li class="sidebar__list"><a href="#services" class="sidebar__link">services</a></li>
            <li class="sidebar__list"><a href="#aboutus" class="sidebar__link">about us</a></li>
-           <li class="sidebar__list"><a href="#creatives" class="sidebar__link">creatives</a></li>
+           <li class="sidebar__list"><a href="#creatives" class="sidebar__link">creatives</a><span> (portfolio)</span></li>
            <li class="sidebar__list"><a href="#price" class="sidebar__link">price</a></li>
            <li class="sidebar__list"><a href="#clients" class="sidebar__link">clients</a></li>
            <li class="sidebar__list"><a href="#contact" class="sidebar__link">contact</a></li>
