--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     </p>
                 </address>
                 <div class="icon-wrapper">
+                   <span class="icons">
                     <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"><img src="./img/Instagram.svg"
                         alt="instagram"></a>
                 <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/TikTok.svg"
@@ -58,10 +59,12 @@
                         alt="telegram"></a>
                 <a href="https://www.tiktok.com/supersite" class="navbar__icon"><img src="./img/Mail_ru.svg"
                         alt="mail"></a>
+                   </span>
                    <span class="search-wrapper">
                     <input type="text" class="search-input" placeholder="Search">
                     <img src="./img/search.svg" alt="" class="search-icon">
                    </span>
+                   <button class="menu-btn burger-button"><img src="./img/Menu.svg" alt="=" onclick="w3_open()"></button>
                 </div>
             </div>
         </nav>
@@ -197,8 +200,8 @@
 <div class="container">
     <h3 class="about__title">.about us</h3>
 <div class="about-text-wrapper">
-    <p class="about__text about-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap</p>
-<p class="about__text">into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p class="about__text about-text">We are a full-fledged marketing agency that has been working in Uzbekistan and the CIS for a long time, feeling our strength entering the farthest corners of the business.  From the first day of work, we are interested in how the client's workflow works and how we can make it better!</p>
+<p class="about__text">Our team approaches the development as comprehensively as possible. First of all, we carefully analyze market trends and competitors, and then we will promote your business to the highest level.</p>
 </div>
 <img src="http://techallylabs.com/images/resource/service-2.jpg" alt="photo" class="about__img">
 </div>
