--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <section class="about" id="aboutus">
 <div class="container">
-    <h3 class="about__title">.about us</h3>
+    <h3 class="about__title">.about our agency</h3>
 <div class="about-text-wrapper">
     <p class="about__text about-text">We are a full-fledged marketing agency that has been working in Uzbekistan and the CIS for a long time, feeling our strength entering the farthest corners of the business.  From the first day of work, we are interested in how the client's workflow works and how we can make it better!</p>
 <p class="about__text">Our team approaches the development as comprehensively as possible. First of all, we carefully analyze market trends and competitors, and then we will promote your business to the highest level.</p>
