--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                    </span>
                    <span class="search-wrapper">
                     <input type="text" class="search-input" placeholder="Search">
-                    <img src="./img/search.svg" alt="" class="search-icon">
+                    <img src="./img/search.svg" alt="0" class="search-icon">
                    </span>
                    <button class="menu-btn burger-button"><img src="./img/Menu.svg" alt="=" onclick="w3_open()"></button>
                 </div>
@@ -76,14 +76,13 @@
                         <img src="./img/logo.svg" alt="logo" class="logo" width="70" height="70">
                     </a>
                 </div>
-                <a href="tel:+14049189548" class="phone-numer">+1 404 918 9548</a>
+                <a href="tel:+998998147090" class="phone-numer">+998 99 814 70 90</a>
             </div>
         </nav>
         <section class="intro">
             <div class="container">
                 <div class="text-wrapper">
-                    <h1 class="intro__title">Lorem Ipsum is simply dummy
-                        text of the printing typesetting</h1>
+                    <h1 class="intro__title">Entrust the responsible marketing process to our team and people will start talking</h1>
                     <p class="intro__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting
                         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                         unknown printer</p>
@@ -102,7 +101,7 @@
                         <img src="./img/custom-web-development.svg" alt="card" width="370px" height="230">
                       <span>
                           <h4 class="card__number">01</h4>
-                          <a href="" class="card-more">more</a>
+                          <a href="./index.html" class="card-more">more</a>
                     </span>
                         <h3 class="card__title">.WEB Developing</h3>
                         <p class="card__text">
@@ -114,7 +113,7 @@
                         <img src="./img/webfon.svg" alt="card" width="370px" height="230">
                         <span>
                             <h4 class="card__number">02</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.WEB Design</h3>
                         <p class="card__text">
@@ -126,7 +125,7 @@
                         <img src="./img/mobileweb.svg" alt="card" width="370px" height="230">
                         <span>
                             <h4 class="card__number">03</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.MOBILE APP DEVELOPMENT</h3>
                         <p class="card__text">
@@ -138,7 +137,7 @@
                         <img src="./img/seo.svg" alt="card" width="370px" height="230">
                         <span>
                             <h4 class="card__number">04</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.seo</h3>
                         <p class="card__text">
@@ -150,7 +149,7 @@
                         <img src="./img/smmfon.svg" alt="card">
                         <span>
                             <h4 class="card__number">05</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.SMM</h3>
                         <p class="card__text">
@@ -162,7 +161,7 @@
                         <img src="./img/robot.svg" alt="card" width="370px" height="230">
                         <span>
                             <h4 class="card__number">06</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.development of telegram bots</h3>
                         <p class="card__text">
@@ -174,7 +173,7 @@
                         <img src="./img/noutbok-dual.svg" alt="card" width="370px" height="230">
                         <span>
                             <h4 class="card__number">07</h4>
-                            <a href="" class="card-more">more</a>
+                            <a href="./index.html" class="card-more">more</a>
                       </span>
                         <h3 class="card__title">.advertisement</h3>
                         <p class="card__text">
@@ -276,7 +275,7 @@
                         </a>
                         </div>
                 </div>
-                <a href="" class="more-btn">more</a>
+                <a href="./index.html" class="more-btn">more</a>
             </div>
         </section>
         <section class="price" id="price">
@@ -334,7 +333,6 @@
         <section class="clients" id="clients">
             <div class="container">
                 <h3 class="clients__title">.our clients</h3>
-
                 <ul class="carusel">
                     <li class="carusel-item">
                         <img src="./img/mila.svg" alt="homiy">
