--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
                 <h3 class="contact__title">.contact</h3>
                 <p class="contact__subtitle">Drop us a line</p>
 
-                <form class="contact-form">
-                    <input type="text" placeholder="Name:" required class="contact-input">
-                    <input type="text" placeholder="Email:" required class="contact-input">
-                    <input type="text" placeholder="Your company:" required class="contact-input">
-                    <input type="text" placeholder="Phone:" required class="contact-input">
+                <form class="contact-form" id="form">
+                    <input type="text" id="name" placeholder="Name:" required class="contact-input">
+                    <input type="text" id="email" placeholder="Email:" required class="contact-input">
+                    <input type="text" id="company" placeholder="Your company:" required class="contact-input">
+                    <input type="text" id="phone" placeholder="Phone:" required class="contact-input">
                     <button type="submit" class="contact-btn">Send</button>
                 </form>
             </div>
