All complate sucsses

--- a/index.html
+++ b/index.html
@@ -334,12 +334,14 @@
                 <h3 class="price__title">.price</h3>
                 <p class="price__subtitle">Select the service you want</p>
 
+               <div class="select-wrapper">
                 <select name="select" id="desktop" class="select">
                     <option value="smm">SMM</option>
                     <option value="smm">Mobile Devaloping</option>
                     <option value="smm">Telegram Bot</option>
                     <option value="smm">Web Devaloping</option>
                 </select>
+               </div>
 
                 <ul class="price-cards">
                     <li class="price-card">
