add animation swipe

--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Supersite</title>
+    <title>Supersite.uz</title>
     <link rel="stylesheet" href="./css/main.min.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
     <link rel="icon" type="image/svg+xml" href="./img/logo.svg" />
   </head>
@@ -60,7 +53,7 @@
             <a href="https://t.me/supersiteuz" class="navbar__icon"
               ><img src="./img/Telegram.svg" alt="telegram"
             /></a>
-            <a href="https://www.tiktok.com/supersite" class="navbar__icon"
+            <a href="http://supersite.uz/ordered" class="navbar__icon"
               ><img src="./img/Mail_ru.svg" alt="mail"
             /></a>
           </li>
@@ -71,9 +64,9 @@
         <div class="container">
           <address class="address">
             address:
-            <p class="subtitle">
-              8744 Main Street, Unit 403 Woodstock GA 30188
-            </p>
+            <a href="https://goo.gl/maps/yHjPNYtG6GQBxLhd9" class="subtitle">  
+                Юнусабад, Стройцентр 227-офис
+            </a>
           </address>
           <div class="icon-wrapper">
             <span class="icons">
@@ -353,7 +346,7 @@
           <h3 class="creatives__title">.creatives</h3>
           <p class="creatives__subtitle">our portfolio</p>
           <div class="portfolio-cards">
-            <div class="portfolio-card">
+            <div class="portfolio-card" id="image-wrapp">
               <a href="https://pressauz.herokuapp.com" class="portfolio-link">
                 <img
                   src="./img/porfolio-img.jpg"
@@ -362,7 +355,7 @@
                 />
               </a>
             </div>
-            <div class="portfolio-card">
+            <div class="portfolio-card" id="image-wrapp">
               <a href="https://tasbex-max.netlify.app" class="portfolio-link">
                 <img
                   src="./img/porfolio-img.jpg"
@@ -371,7 +364,7 @@
                 />
               </a>
             </div>
-            <div class="portfolio-card">
+            <div class="portfolio-card" id="image-wrapp">
               <a
                 href="https://weatherapps-max.netlify.app"
                 class="portfolio-link"
@@ -382,8 +375,8 @@
                   class="portfolio-img"
                 />
               </a>
-            </div>
-            <div class="portfolio-card">
+            </div> 
+            <div class="portfolio-card" id="image-wrapp">
               <a
                 href="https://suspicious-allen-33106f.netlify.app"
                 class="portfolio-link"
@@ -395,7 +388,7 @@
                 />
               </a>
             </div>
-            <div class="portfolio-card">
+            <div class="portfolio-card" id="image-wrapp">
               <a
                 href="https://artificial-inteligence.netlify.app"
                 class="portfolio-link"
@@ -407,7 +400,7 @@
                 />
               </a>
             </div>
-            <div class="portfolio-card">
+            <div class="portfolio-card" id="image-wrapp">
               <a
                 href="https://affectionate-stonebraker-dee9e1.netlify.app"
                 class="portfolio-link"
@@ -543,7 +536,7 @@
               required
               class="contact-input"
             />
-            <button type="submit" class="contact-btn">Send</button>
+            <button type="submit" class="contact-btn" id="btn">Send</button>
           </form>
         </div>
       </section>
@@ -573,7 +566,7 @@
 
         <div class="footer-icons">
           <a href="https://www.instagram.com/supersite.uz" class="navbar__icon"
-            ><img src="./img/Instagram.svg" alt="instagram"
+            ><img src="./img/Instagram.svg" alt="instagram" 
           /></a>
           <a href="https://www.tiktok.com/supersite" class="navbar__icon"
             ><img src="./img/TikTok.svg" alt="tiktok"
@@ -581,7 +574,7 @@
           <a href="https://t.me/supersiteuz" class="navbar__icon"
             ><img src="./img/Telegram.svg" alt="telegram"
           /></a>
-          <a href="https://www.tiktok.com/supersite" class="navbar__icon"
+          <a href="http://supersite.uz/ordered" class="navbar__icon"
             ><img src="./img/Mail_ru.svg" alt="mail"
           /></a>
         </div>
